Grease pencil crash on vse #43293

Closed
opened 2015-01-17 07:36:53 +01:00 by Nahuel Belich · 10 comments

System Information
windows 7 x64
nvidia 460 (drivers: 335.23)

Blender Version
Broken:Hash: f65b369
also broken on 2.73 official.

Short description of error
It seams that if the same Grese pencil data block its used on objects and inside VSE selecting grase points using right click inside vse crashes blender, but selecting all using A didn't.

Exact steps for others to reproduce the error
1- open the file grease_pencil_VSE_crash.blend

**System Information** windows 7 x64 nvidia 460 (drivers: 335.23) **Blender Version** Broken:Hash: f65b369 also broken on 2.73 official. **Short description of error** It seams that if the same Grese pencil data block its used on objects and inside VSE selecting grase points using right click inside vse crashes blender, but selecting all using A didn't. **Exact steps for others to reproduce the error** 1- open the file [grease_pencil_VSE_crash.blend](https://archive.blender.org/developer/F137645/grease_pencil_VSE_crash.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich
Author

the "Intro" submit the report before finish it.
2- hover on the right monitor (the vse) and select using A (that should work)
3- hit A again to deselect
4-try on the right monitor(the vse) to select a grease pencil point using Right click.
5- look at the crash.

the "Intro" submit the report before finish it. 2- hover on the right monitor (the vse) and select using A (that should work) 3- hit A again to deselect 4-try on the right monitor(the vse) to select a grease pencil point using Right click. 5- look at the crash.
Joshua Leung was assigned by Bastien Montagne 2015-01-17 10:51:21 +01:00

Added subscriber: @mont29

Added subscriber: @mont29
Member

Ok, indeed this crashes.

The reason is that all the tools currently assume that all strokes will be valid for being manipulated in the editor in question, but that is not always the case (i.e. here, a 3D stroke was encountered in a 2D view, but since the relevant settings were not able to be initialised, it crashes).

Working on a fix now :)

Ok, indeed this crashes. The reason is that all the tools currently assume that all strokes will be valid for being manipulated in the editor in question, but that is not always the case (i.e. here, a 3D stroke was encountered in a 2D view, but since the relevant settings were not able to be initialised, it crashes). Working on a fix now :)
Author

Thanks
i imagine something like that could be happening, the work around was to copy the points from the vse the ones im interested on, to a new grease pencil data block and that work, but it took a wile to figure it out ^ -^,

Thanks i imagine something like that could be happening, the work around was to copy the points from the vse the ones im interested on, to a new grease pencil data block and that work, but it took a wile to figure it out ^ -^,

This issue was referenced by 32ffc63d20

This issue was referenced by 32ffc63d20908c6433e0e92488be3b5568f81f69
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 32ffc63d20.

Closed by commit 32ffc63d20.

This issue was referenced by 9bd38a1796

This issue was referenced by 9bd38a17961fd049c18155545bb740385f403fb0
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43293
No description provided.