GPencil: Added asserts for checking when trying to convert coordinates for invalid stroke types (for current editor)

Added for checking on the cause of T43293, and to aid in setting up a fix to
remedy the situation.